70 fix responsiveness (#71)
* Fix home page responsiveness

* add space to sections

* fix responsiveness

* reduce section height

* fix image going over

* Fix text overlapping

--- a/src/Pages/Team/Team.css
+++ b/src/Pages/Team/Team.css
@@ -82,18 +82,10 @@ body {
   color: #FFFFFF;
 }
 
-.Header {
-  background: #c7e3ff;
-  /* background: linear-gradient(to top, #c7e3ff 60%, transparent 60%); */
-  padding: 0 10px;
-  color: #0078e8;
-}
-
 .HeaderStyle {
   text-align: center;
+  padding-bottom: 1rem;
   border-bottom: 1px solid #e4e4e4;
-  line-height: 0.1em;
-  margin: 10px 0 20px;
 }
 
 .HeartIcon {
@@ -129,9 +121,12 @@ body {
 }
 
 #banner-container {
-  position: relative;
-	width: 100%;
-	margin-bottom: 40px;
+  background-position: 50% 50%;
+  display: flex;
+  align-items: center;
+  background-image: url(../../assets/teamPageBanner.png);
+  background-size: cover;
+  min-height: 30rem;
 }
 
 #banner-subheading {
@@ -153,12 +148,6 @@ body {
 }
 
 #banner-text {
-  position: absolute;
-  width: 600px;
-  height: 90px;
-  left: 220px;
-  top: 30%;
-
   text-align: left;
 
   font-family: 'Poppins', sans-serif;
